# quant-project

./: .gitignore  README.md
C++-PDE-Option-Pricer-(Crank-Nicolson)/: .gitignore  CMakeLists.txt  README.md
C++-PDE-Option-Pricer-(Crank-Nicolson)/include/: LinearSolver.h  PDESolver.h  Payoff.h  interface.h
C++-PDE-Option-Pricer-(Crank-Nicolson)/src/: LinearSolver.cpp  PDESolver.cpp  interface.cpp  main.cpp
HSBC-Retirement-ALM/: README.md
HSBC-Retirement-ALM/Fixedmix/: Fixedmix.py  README.md
Kalman_Statarb_Project/: README.md  fix_config.py  main.py  pyproject.toml
Kalman_Statarb_Project/src/kalman_arb/: events.py
Kalman_Statarb_Project/src/kalman_arb/backtest/: engine.py
Kalman_Statarb_Project/src/kalman_arb/core/: kalman.py
Kalman_Statarb_Project/src/kalman_arb/strategy/: mean_reversion.py
Kalman_Statarb_Project/src/kalman_arb/utils/: data_loader.py
Kalman_Statarb_Project/tests/: test_core_kalman.py  test_strategy_logic.py
Projet_EDP/: .gitignore  CMakeLists.txt
Projet_EDP/app/: CMakeLists.txt  main.cpp
Projet_EDP/include/edp/: Interface.h  LinearSolver.h  PDESolver.h  Payoff.h
Projet_EDP/src/: CMakeLists.txt  Interface.cpp  LinearSolver.cpp  PDESolver.cpp
Projet_EDP/tests/: CMakeLists.txt  Test_LinearSolver.cpp  Test_PDESolver.cpp
black-scholes-pricer/: README.md
black-scholes-pricer/src/: README.md  black_scholes.cpp  black_scholes.h  main.cpp
